--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,14 +1,14 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+ThePhoenix:
+  name: ThePhoenix / Nikolai
+  title: Communityleiter
+  url:
+  image_url: 
 
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
+bsg_team:
+  name: Black Star Gaming Team
+  title: Black Star Gaming Team
+  url: 
+  image_url: 
 
 slorber:
   name: Sébastien Lorber
