Update 26.05.23 + Neuer Blog Post

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -11,7 +11,7 @@ bsg_team:
   image_url: https://raw.githubusercontent.com/Nikolai-Ahlhelm/blackstar-gaming/main/static/img/logo.png
 
 slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+  name: Banshee / Anna
+  title: Communitymanagerin
+  url: https://blackstar-gaming.de
+  image_url: https://raw.githubusercontent.com/Nikolai-Ahlhelm/blackstar-gaming/main/static/img/authors_images/nikolai.jpg
