Authors.yml update

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 nikolai:
-  name: ThePhoenix / Nikolai
+  name: Nikolai (ThePhoenix)
   title: Communityleiter
   url: https://blackstar-gaming.de
   image_url: https://raw.githubusercontent.com/Nikolai-Ahlhelm/blackstar-gaming/main/static/img/authors_images/nikolai.jpg
